fixed some frontend z-index issues

--- a/frontend/src/components/home/Home.css
+++ b/frontend/src/components/home/Home.css
@@ -9,7 +9,6 @@
 .intro {
   max-width: 540px;
   text-align: center;
-  z-index: 10;
 }
 
 .home__img {
