--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -113,6 +113,11 @@ img {
 
 /*=============== Resusable CSS Classes ===============*/
 
+.z-10 {
+  position: relative;
+  z-index: 10;
+}
+
 .container {
   max-width: 1080px;
   padding-left: 15px;
